--- a/SalForceApp/app/build.gradle
+++ b/SalForceApp/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.android.support:design:27.0.+'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    compile 'commons-codec:commons-codec:1.11'
 
     compile project(':knife')
 
