--- a/SalForceApp/app/src/main/AndroidManifest.xml
+++ b/SalForceApp/app/src/main/AndroidManifest.xml
@@ -67,11 +67,20 @@
 
         <activity
             android:name=".Activity.TaskList"
-            android:saveEnabled="false" />
+            android:label="@string/app_name"
+            android:saveEnabled="false"
+            android:theme="@style/AppTheme.NoActionBar"  />
         <activity
             android:name=".Activity.ShowTaskDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activity.DraftList" />
+        <activity android:name=".Activity.DraftList"
+            android:label="@string/app_name"
+            android:saveEnabled="false"
+            android:theme="@style/AppTheme.NoActionBar"    />
+
+
+
+
         <activity android:name=".Activity.CreateTaskActivity"
             android:theme="@style/AppTheme.NoActionBar"  ></activity>
     </application>
