--- a/SalForceApp/app/build.gradle
+++ b/SalForceApp/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile 'commons-codec:commons-codec:1.11'
+    compile 'com.rmtheis:tess-two:5.4.1'
 
     compile project(':knife')
 
